--- a/index/index.css
+++ b/index/index.css
@@ -28,20 +28,59 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+/* Style all font awesome icons */
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  top: 600px;
+  text-align: center;
+  text-decoration: none;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+  background: #9f7856;
+  color: white;
+}
+
+/* Twitter */
+.fa-twitter {
+  background: #9f7856;
+  color: white;
+}
+
 svg {
   font-weight: bold;
   max-width: 800px;
   height: 150%;
 }
 
+#box {
+  width: 1500px;
+  height: 1000px;
+  background-color: #6a5c53;
+  position: absolute;
+  top: 910px;
+}
+
 #About {
   color: #ffffff;
   font-family: "Merriweather", serif;
   font-size: 50px;
+  z-index: 1;
   text-align: center;
   font-weight: bold;
   position: absolute;
-  top: 995px;
+  top: 920px;
   margin-top: 0px;
   margin-bottom: 50px;
   margin-left: 5em;
@@ -51,6 +90,7 @@ svg {
 /* Style the navbar */
 #navbar {
   overflow: hidden;
+  z-index: 2; /*Add this*/
   background-color: #9f7856;
 }
 
