just quick color swaps, taylor wants colors to be reworked

--- a/index/index.css
+++ b/index/index.css
@@ -67,7 +67,7 @@ svg {
 #box {
   width: 1500px;
   height: 1000px;
-  background-color: #6a5c53;
+  background-color: #12230d;
   position: absolute;
   top: 910px;
 }
